@@ -1,6 +1,6 @@
 Package: jagsUI
-Version: 1.4.4
-Date: 2016-12-2
+Version: 1.4.5
+Date: 2016-2-7
 Title: A Wrapper Around 'rjags' to Streamline 'JAGS' Analyses
 Author: Ken Kellner <contact@kenkellner.com>
 Maintainer: Ken Kellner <contact@kenkellner.com>
