@@ -2,7 +2,6 @@ import(lattice)
 
 importFrom(rjags, "jags.model", "adapt", "coda.samples", "list.modules",
            "load.module","unload.module")
-importFrom(methods, "setGeneric", "setMethod", "setClass")
 importFrom(coda, "gelman.diag", "as.mcmc.list", "thin", "mcmc", "as.mcmc")
 importFrom(parallel, "detectCores", "makeCluster", "clusterExport", 
            "clusterSetRNGStream", "clusterApply", "stopCluster", "clusterEvalQ")
