@@ -7,6 +7,8 @@ print.jagsUI <- function(x,digits=3,...){
   if(!x$bugs.format){
     cat('JAGS output for model \'',x$modfile,'\', generated by jagsUI.','\n',sep="")
     cat('Estimates based on',x$mcmc.info$n.chains,'chains of',x$mcmc.info$n.iter,'iterations,\n') 
+    if(x$mcmc.info$sufficient.adapt){cat('adaptation =',mean(x$mcmc.info$n.adapt),'iterations (sufficient),\n')
+      } else{cat('adaptation =',mean(x$mcmc.info$n.adapt),'iterations (possibly insufficient),\n')}
     cat('burn-in = ',x$mcmc.info$n.burnin,' iterations and thin rate = ',x$mcmc.info$n.thin,',','\n',sep="")
     cat('yielding',x$mcmc.info$n.samples,'total samples from the joint posterior.','\n')
     if(!x$parallel){cat('MCMC ran for ',x$mcmc.info$elapsed.mins,' minutes at time ',paste(x$run.date),'.\n','\n',sep="")
