@@ -1,7 +1,6 @@
-setClass("jagsUIbasic")
 
-update.jagsUIbasic <- function(object, parameters.to.save=NULL, n.adapt=100, n.iter, n.thin=NULL, 
-                               modules=c('glm'), seed=as.integer(Sys.time()), verbose=TRUE, ...){
+update.jagsUIbasic <- function(object, parameters.to.save=NULL, n.adapt=NULL, n.iter, n.thin=NULL, 
+                               modules=c('glm'), DIC=NULL, seed=as.integer(Sys.time()), verbose=TRUE, ...){
   
   mod <- object$model
   n.chains <- length(object$samples)
@@ -12,9 +11,15 @@ update.jagsUIbasic <- function(object, parameters.to.save=NULL, n.adapt=100, n.i
     parameters <- unique(sapply(strsplit(params.temp, "\\["), "[", 1))
   } else {parameters <- parameters.to.save}
   
-  if('deviance'%in%parameters){
-    DIC=TRUE
-  } else {DIC=FALSE}
+  #Set up DIC monitoring
+  if(is.null(DIC)){
+    if('deviance'%in%parameters){
+      DIC=TRUE
+    } else {DIC=FALSE}
+  } else{
+    if(DIC&!'deviance'%in%parameters){parameters <- c(parameters,'deviance')
+    } else if(!DIC&'deviance'%in%parameters){parameters <- parameters[parameters!='deviance']}
+  }
   
   if(is.null(n.thin)){n.thin <- thin(object$samples)}
   
